--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Android 5780</string>
     <string name="title_activity_add_detail">AddDetailActivity</string>
     <string name="fab_message">Welcome Android class</string>
+    <string name="parcel_list_button">Show Parcels List</string>
+    <string name="call_to_support">Call Support</string>
 </resources>
